# dixp

./: BENCHMARK_SUMMARY.md  COMPETITIVE_COMPARISON.md  README.md  pyproject.toml
benchmarks/: README.md  latest-results.json  latest-results.md  render_results_md.py  run_di_benchmarks.py
src/dixp/: __init__.py  config.py  doctor.py  testing.py
src/dixp/api/: __init__.py  app.py  component.py
src/dixp/configuration/: __init__.py  compiled.py  compiler.py  declarative.py  modern.py  registry.py
src/dixp/core/: __init__.py  error_formatting.py  errors.py  graph.py  metadata.py  models.py  ports.py  resolution.py
src/dixp/inspection/: __init__.py  graph.py
src/dixp/runtime/: __init__.py  cache.py  container.py  context.py  registry.py
tests/: test_container.py
