[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dixp"
version = "0.1.0"
description = "A pragmatic IoC container for Python"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "OpenAI Codex" }]
license = { text = "MIT" }
keywords = ["ioc", "di", "dependency-injection", "container", "python"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
dixp = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.unittest]
testpaths = ["tests"]
